Add layout, resources & tasks

--- a/MyNewPlugin/build-web/index.html
+++ b/MyNewPlugin/build-web/index.html
@@ -6,7 +6,7 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css"/>
     <script src="scripts/audioworklet.js"></script>
     <script async src="fonts.js"></script>
-    <!--<script async src="svgs.js"></script>-->
+    <script async src="svgs.js"></script>
     <script async src="imgs.js"></script>
     <script async src="imgs@2x.js"></script>
     <script async src="scripts/MyNewPlugin-web.js"></script>
